--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
+
+/* @font-face {
+  font-family: "Montserrat";
+  src: url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+  src: local("Montserrat"),
+    url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap")
+      format("ttf");
+} */
+
 @tailwind utilities;
