avance de platzi travel

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22708,10 +22708,6 @@ video {
   font-family: Montserrat, sans-serif;
 }
 
-.font-kalam {
-  font-family: kalam;
-}
-
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
@@ -23380,6 +23376,21 @@ video {
   color: rgba(131, 24, 67, var(--tw-text-opacity));
 }
 
+.text-primary {
+  --tw-text-opacity: 1;
+  color: rgba(204, 45, 74, var(--tw-text-opacity));
+}
+
+.text-secondary {
+  --tw-text-opacity: 1;
+  color: rgba(143, 162, 6, var(--tw-text-opacity));
+}
+
+.text-terciary {
+  --tw-text-opacity: 1;
+  color: rgba(97, 174, 201, var(--tw-text-opacity));
+}
+
 .group:hover .group-hover\:text-transparent {
   color: transparent;
 }
@@ -23796,6 +23807,21 @@ video {
 .group:hover .group-hover\:text-pink-900 {
   --tw-text-opacity: 1;
   color: rgba(131, 24, 67, var(--tw-text-opacity));
+}
+
+.group:hover .group-hover\:text-primary {
+  --tw-text-opacity: 1;
+  color: rgba(204, 45, 74, var(--tw-text-opacity));
+}
+
+.group:hover .group-hover\:text-secondary {
+  --tw-text-opacity: 1;
+  color: rgba(143, 162, 6, var(--tw-text-opacity));
+}
+
+.group:hover .group-hover\:text-terciary {
+  --tw-text-opacity: 1;
+  color: rgba(97, 174, 201, var(--tw-text-opacity));
 }
 
 .focus-within\:text-transparent:focus-within {
@@ -24216,6 +24242,21 @@ video {
   color: rgba(131, 24, 67, var(--tw-text-opacity));
 }
 
+.focus-within\:text-primary:focus-within {
+  --tw-text-opacity: 1;
+  color: rgba(204, 45, 74, var(--tw-text-opacity));
+}
+
+.focus-within\:text-secondary:focus-within {
+  --tw-text-opacity: 1;
+  color: rgba(143, 162, 6, var(--tw-text-opacity));
+}
+
+.focus-within\:text-terciary:focus-within {
+  --tw-text-opacity: 1;
+  color: rgba(97, 174, 201, var(--tw-text-opacity));
+}
+
 .hover\:text-transparent:hover {
   color: transparent;
 }
@@ -24634,6 +24675,21 @@ video {
   color: rgba(131, 24, 67, var(--tw-text-opacity));
 }
 
+.hover\:text-primary:hover {
+  --tw-text-opacity: 1;
+  color: rgba(204, 45, 74, var(--tw-text-opacity));
+}
+
+.hover\:text-secondary:hover {
+  --tw-text-opacity: 1;
+  color: rgba(143, 162, 6, var(--tw-text-opacity));
+}
+
+.hover\:text-terciary:hover {
+  --tw-text-opacity: 1;
+  color: rgba(97, 174, 201, var(--tw-text-opacity));
+}
+
 .focus\:text-transparent:focus {
   color: transparent;
 }
@@ -25050,6 +25106,21 @@ video {
 .focus\:text-pink-900:focus {
   --tw-text-opacity: 1;
   color: rgba(131, 24, 67, var(--tw-text-opacity));
+}
+
+.focus\:text-primary:focus {
+  --tw-text-opacity: 1;
+  color: rgba(204, 45, 74, var(--tw-text-opacity));
+}
+
+.focus\:text-secondary:focus {
+  --tw-text-opacity: 1;
+  color: rgba(143, 162, 6, var(--tw-text-opacity));
+}
+
+.focus\:text-terciary:focus {
+  --tw-text-opacity: 1;
+  color: rgba(97, 174, 201, var(--tw-text-opacity));
 }
 
 .text-opacity-0 {
@@ -54611,10 +54682,6 @@ video {
     font-family: Montserrat, sans-serif;
   }
 
-  .sm\:font-kalam {
-    font-family: kalam;
-  }
-
   .sm\:text-xs {
     font-size: 0.75rem;
     line-height: 1rem;
@@ -55283,6 +55350,21 @@ video {
     color: rgba(131, 24, 67, var(--tw-text-opacity));
   }
 
+  .sm\:text-primary {
+    --tw-text-opacity: 1;
+    color: rgba(204, 45, 74, var(--tw-text-opacity));
+  }
+
+  .sm\:text-secondary {
+    --tw-text-opacity: 1;
+    color: rgba(143, 162, 6, var(--tw-text-opacity));
+  }
+
+  .sm\:text-terciary {
+    --tw-text-opacity: 1;
+    color: rgba(97, 174, 201, var(--tw-text-opacity));
+  }
+
   .group:hover .sm\:group-hover\:text-transparent {
     color: transparent;
   }
@@ -55699,6 +55781,21 @@ video {
   .group:hover .sm\:group-hover\:text-pink-900 {
     --tw-text-opacity: 1;
     color: rgba(131, 24, 67, var(--tw-text-opacity));
+  }
+
+  .group:hover .sm\:group-hover\:text-primary {
+    --tw-text-opacity: 1;
+    color: rgba(204, 45, 74, var(--tw-text-opacity));
+  }
+
+  .group:hover .sm\:group-hover\:text-secondary {
+    --tw-text-opacity: 1;
+    color: rgba(143, 162, 6, var(--tw-text-opacity));
+  }
+
+  .group:hover .sm\:group-hover\:text-terciary {
+    --tw-text-opacity: 1;
+    color: rgba(97, 174, 201, var(--tw-text-opacity));
   }
 
   .sm\:focus-within\:text-transparent:focus-within {
@@ -56119,6 +56216,21 @@ video {
     color: rgba(131, 24, 67, var(--tw-text-opacity));
   }
 
+  .sm\:focus-within\:text-primary:focus-within {
+    --tw-text-opacity: 1;
+    color: rgba(204, 45, 74, var(--tw-text-opacity));
+  }
+
+  .sm\:focus-within\:text-secondary:focus-within {
+    --tw-text-opacity: 1;
+    color: rgba(143, 162, 6, var(--tw-text-opacity));
+  }
+
+  .sm\:focus-within\:text-terciary:focus-within {
+    --tw-text-opacity: 1;
+    color: rgba(97, 174, 201, var(--tw-text-opacity));
+  }
+
   .sm\:hover\:text-transparent:hover {
     color: transparent;
   }
@@ -56537,6 +56649,21 @@ video {
     color: rgba(131, 24, 67, var(--tw-text-opacity));
   }
 
+  .sm\:hover\:text-primary:hover {
+    --tw-text-opacity: 1;
+    color: rgba(204, 45, 74, var(--tw-text-opacity));
+  }
+
+  .sm\:hover\:text-secondary:hover {
+    --tw-text-opacity: 1;
+    color: rgba(143, 162, 6, var(--tw-text-opacity));
+  }
+
+  .sm\:hover\:text-terciary:hover {
+    --tw-text-opacity: 1;
+    color: rgba(97, 174, 201, var(--tw-text-opacity));
+  }
+
   .sm\:focus\:text-transparent:focus {
     color: transparent;
   }
@@ -56953,6 +57080,21 @@ video {
   .sm\:focus\:text-pink-900:focus {
     --tw-text-opacity: 1;
     color: rgba(131, 24, 67, var(--tw-text-opacity));
+  }
+
+  .sm\:focus\:text-primary:focus {
+    --tw-text-opacity: 1;
+    color: rgba(204, 45, 74, var(--tw-text-opacity));
+  }
+
+  .sm\:focus\:text-secondary:focus {
+    --tw-text-opacity: 1;
+    color: rgba(143, 162, 6, var(--tw-text-opacity));
+  }
+
+  .sm\:focus\:text-terciary:focus {
+    --tw-text-opacity: 1;
+    color: rgba(97, 174, 201, var(--tw-text-opacity));
   }
 
   .sm\:text-opacity-0 {
@@ -86162,10 +86304,6 @@ video {
     font-family: Montserrat, sans-serif;
   }
 
-  .md\:font-kalam {
-    font-family: kalam;
-  }
-
   .md\:text-xs {
     font-size: 0.75rem;
     line-height: 1rem;
@@ -86834,6 +86972,21 @@ video {
     color: rgba(131, 24, 67, var(--tw-text-opacity));
   }
 
+  .md\:text-primary {
+    --tw-text-opacity: 1;
+    color: rgba(204, 45, 74, var(--tw-text-opacity));
+  }
+
+  .md\:text-secondary {
+    --tw-text-opacity: 1;
+    color: rgba(143, 162, 6, var(--tw-text-opacity));
+  }
+
+  .md\:text-terciary {
+    --tw-text-opacity: 1;
+    color: rgba(97, 174, 201, var(--tw-text-opacity));
+  }
+
   .group:hover .md\:group-hover\:text-transparent {
     color: transparent;
   }
@@ -87250,6 +87403,21 @@ video {
   .group:hover .md\:group-hover\:text-pink-900 {
     --tw-text-opacity: 1;
     color: rgba(131, 24, 67, var(--tw-text-opacity));
+  }
+
+  .group:hover .md\:group-hover\:text-primary {
+    --tw-text-opacity: 1;
+    color: rgba(204, 45, 74, var(--tw-text-opacity));
+  }
+
+  .group:hover .md\:group-hover\:text-secondary {
+    --tw-text-opacity: 1;
+    color: rgba(143, 162, 6, var(--tw-text-opacity));
+  }
+
+  .group:hover .md\:group-hover\:text-terciary {
+    --tw-text-opacity: 1;
+    color: rgba(97, 174, 201, var(--tw-text-opacity));
   }
 
   .md\:focus-within\:text-transparent:focus-within {
@@ -87670,6 +87838,21 @@ video {
     color: rgba(131, 24, 67, var(--tw-text-opacity));
   }
 
+  .md\:focus-within\:text-primary:focus-within {
+    --tw-text-opacity: 1;
+    color: rgba(204, 45, 74, var(--tw-text-opacity));
+  }
+
+  .md\:focus-within\:text-secondary:focus-within {
+    --tw-text-opacity: 1;
+    color: rgba(143, 162, 6, var(--tw-text-opacity));
+  }
+
+  .md\:focus-within\:text-terciary:focus-within {
+    --tw-text-opacity: 1;
+    color: rgba(97, 174, 201, var(--tw-text-opacity));
+  }
+
   .md\:hover\:text-transparent:hover {
     color: transparent;
   }
@@ -88088,6 +88271,21 @@ video {
     color: rgba(131, 24, 67, var(--tw-text-opacity));
   }
 
+  .md\:hover\:text-primary:hover {
+    --tw-text-opacity: 1;
+    color: rgba(204, 45, 74, var(--tw-text-opacity));
+  }
+
+  .md\:hover\:text-secondary:hover {
+    --tw-text-opacity: 1;
+    color: rgba(143, 162, 6, var(--tw-text-opacity));
+  }
+
+  .md\:hover\:text-terciary:hover {
+    --tw-text-opacity: 1;
+    color: rgba(97, 174, 201, var(--tw-text-opacity));
+  }
+
   .md\:focus\:text-transparent:focus {
     color: transparent;
   }
@@ -88504,6 +88702,21 @@ video {
   .md\:focus\:text-pink-900:focus {
     --tw-text-opacity: 1;
     color: rgba(131, 24, 67, var(--tw-text-opacity));
+  }
+
+  .md\:focus\:text-primary:focus {
+    --tw-text-opacity: 1;
+    color: rgba(204, 45, 74, var(--tw-text-opacity));
+  }
+
+  .md\:focus\:text-secondary:focus {
+    --tw-text-opacity: 1;
+    color: rgba(143, 162, 6, var(--tw-text-opacity));
+  }
+
+  .md\:focus\:text-terciary:focus {
+    --tw-text-opacity: 1;
+    color: rgba(97, 174, 201, var(--tw-text-opacity));
   }
 
   .md\:text-opacity-0 {
@@ -117713,10 +117926,6 @@ video {
     font-family: Montserrat, sans-serif;
   }
 
-  .lg\:font-kalam {
-    font-family: kalam;
-  }
-
   .lg\:text-xs {
     font-size: 0.75rem;
     line-height: 1rem;
@@ -118385,6 +118594,21 @@ video {
     color: rgba(131, 24, 67, var(--tw-text-opacity));
   }
 
+  .lg\:text-primary {
+    --tw-text-opacity: 1;
+    color: rgba(204, 45, 74, var(--tw-text-opacity));
+  }
+
+  .lg\:text-secondary {
+    --tw-text-opacity: 1;
+    color: rgba(143, 162, 6, var(--tw-text-opacity));
+  }
+
+  .lg\:text-terciary {
+    --tw-text-opacity: 1;
+    color: rgba(97, 174, 201, var(--tw-text-opacity));
+  }
+
   .group:hover .lg\:group-hover\:text-transparent {
     color: transparent;
   }
@@ -118801,6 +119025,21 @@ video {
   .group:hover .lg\:group-hover\:text-pink-900 {
     --tw-text-opacity: 1;
     color: rgba(131, 24, 67, var(--tw-text-opacity));
+  }
+
+  .group:hover .lg\:group-hover\:text-primary {
+    --tw-text-opacity: 1;
+    color: rgba(204, 45, 74, var(--tw-text-opacity));
+  }
+
+  .group:hover .lg\:group-hover\:text-secondary {
+    --tw-text-opacity: 1;
+    color: rgba(143, 162, 6, var(--tw-text-opacity));
+  }
+
+  .group:hover .lg\:group-hover\:text-terciary {
+    --tw-text-opacity: 1;
+    color: rgba(97, 174, 201, var(--tw-text-opacity));
   }
 
   .lg\:focus-within\:text-transparent:focus-within {
@@ -119221,6 +119460,21 @@ video {
     color: rgba(131, 24, 67, var(--tw-text-opacity));
   }
 
+  .lg\:focus-within\:text-primary:focus-within {
+    --tw-text-opacity: 1;
+    color: rgba(204, 45, 74, var(--tw-text-opacity));
+  }
+
+  .lg\:focus-within\:text-secondary:focus-within {
+    --tw-text-opacity: 1;
+    color: rgba(143, 162, 6, var(--tw-text-opacity));
+  }
+
+  .lg\:focus-within\:text-terciary:focus-within {
+    --tw-text-opacity: 1;
+    color: rgba(97, 174, 201, var(--tw-text-opacity));
+  }
+
   .lg\:hover\:text-transparent:hover {
     color: transparent;
   }
@@ -119639,6 +119893,21 @@ video {
     color: rgba(131, 24, 67, var(--tw-text-opacity));
   }
 
+  .lg\:hover\:text-primary:hover {
+    --tw-text-opacity: 1;
+    color: rgba(204, 45, 74, var(--tw-text-opacity));
+  }
+
+  .lg\:hover\:text-secondary:hover {
+    --tw-text-opacity: 1;
+    color: rgba(143, 162, 6, var(--tw-text-opacity));
+  }
+
+  .lg\:hover\:text-terciary:hover {
+    --tw-text-opacity: 1;
+    color: rgba(97, 174, 201, var(--tw-text-opacity));
+  }
+
   .lg\:focus\:text-transparent:focus {
     color: transparent;
   }
@@ -120055,6 +120324,21 @@ video {
   .lg\:focus\:text-pink-900:focus {
     --tw-text-opacity: 1;
     color: rgba(131, 24, 67, var(--tw-text-opacity));
+  }
+
+  .lg\:focus\:text-primary:focus {
+    --tw-text-opacity: 1;
+    color: rgba(204, 45, 74, var(--tw-text-opacity));
+  }
+
+  .lg\:focus\:text-secondary:focus {
+    --tw-text-opacity: 1;
+    color: rgba(143, 162, 6, var(--tw-text-opacity));
+  }
+
+  .lg\:focus\:text-terciary:focus {
+    --tw-text-opacity: 1;
+    color: rgba(97, 174, 201, var(--tw-text-opacity));
   }
 
   .lg\:text-opacity-0 {
@@ -149264,10 +149548,6 @@ video {
     font-family: Montserrat, sans-serif;
   }
 
-  .xl\:font-kalam {
-    font-family: kalam;
-  }
-
   .xl\:text-xs {
     font-size: 0.75rem;
     line-height: 1rem;
@@ -149936,6 +150216,21 @@ video {
     color: rgba(131, 24, 67, var(--tw-text-opacity));
   }
 
+  .xl\:text-primary {
+    --tw-text-opacity: 1;
+    color: rgba(204, 45, 74, var(--tw-text-opacity));
+  }
+
+  .xl\:text-secondary {
+    --tw-text-opacity: 1;
+    color: rgba(143, 162, 6, var(--tw-text-opacity));
+  }
+
+  .xl\:text-terciary {
+    --tw-text-opacity: 1;
+    color: rgba(97, 174, 201, var(--tw-text-opacity));
+  }
+
   .group:hover .xl\:group-hover\:text-transparent {
     color: transparent;
   }
@@ -150352,6 +150647,21 @@ video {
   .group:hover .xl\:group-hover\:text-pink-900 {
     --tw-text-opacity: 1;
     color: rgba(131, 24, 67, var(--tw-text-opacity));
+  }
+
+  .group:hover .xl\:group-hover\:text-primary {
+    --tw-text-opacity: 1;
+    color: rgba(204, 45, 74, var(--tw-text-opacity));
+  }
+
+  .group:hover .xl\:group-hover\:text-secondary {
+    --tw-text-opacity: 1;
+    color: rgba(143, 162, 6, var(--tw-text-opacity));
+  }
+
+  .group:hover .xl\:group-hover\:text-terciary {
+    --tw-text-opacity: 1;
+    color: rgba(97, 174, 201, var(--tw-text-opacity));
   }
 
   .xl\:focus-within\:text-transparent:focus-within {
@@ -150772,6 +151082,21 @@ video {
     color: rgba(131, 24, 67, var(--tw-text-opacity));
   }
 
+  .xl\:focus-within\:text-primary:focus-within {
+    --tw-text-opacity: 1;
+    color: rgba(204, 45, 74, var(--tw-text-opacity));
+  }
+
+  .xl\:focus-within\:text-secondary:focus-within {
+    --tw-text-opacity: 1;
+    color: rgba(143, 162, 6, var(--tw-text-opacity));
+  }
+
+  .xl\:focus-within\:text-terciary:focus-within {
+    --tw-text-opacity: 1;
+    color: rgba(97, 174, 201, var(--tw-text-opacity));
+  }
+
   .xl\:hover\:text-transparent:hover {
     color: transparent;
   }
@@ -151190,6 +151515,21 @@ video {
     color: rgba(131, 24, 67, var(--tw-text-opacity));
   }
 
+  .xl\:hover\:text-primary:hover {
+    --tw-text-opacity: 1;
+    color: rgba(204, 45, 74, var(--tw-text-opacity));
+  }
+
+  .xl\:hover\:text-secondary:hover {
+    --tw-text-opacity: 1;
+    color: rgba(143, 162, 6, var(--tw-text-opacity));
+  }
+
+  .xl\:hover\:text-terciary:hover {
+    --tw-text-opacity: 1;
+    color: rgba(97, 174, 201, var(--tw-text-opacity));
+  }
+
   .xl\:focus\:text-transparent:focus {
     color: transparent;
   }
@@ -151606,6 +151946,21 @@ video {
   .xl\:focus\:text-pink-900:focus {
     --tw-text-opacity: 1;
     color: rgba(131, 24, 67, var(--tw-text-opacity));
+  }
+
+  .xl\:focus\:text-primary:focus {
+    --tw-text-opacity: 1;
+    color: rgba(204, 45, 74, var(--tw-text-opacity));
+  }
+
+  .xl\:focus\:text-secondary:focus {
+    --tw-text-opacity: 1;
+    color: rgba(143, 162, 6, var(--tw-text-opacity));
+  }
+
+  .xl\:focus\:text-terciary:focus {
+    --tw-text-opacity: 1;
+    color: rgba(97, 174, 201, var(--tw-text-opacity));
   }
 
   .xl\:text-opacity-0 {
@@ -180815,10 +181170,6 @@ video {
     font-family: Montserrat, sans-serif;
   }
 
-  .\32xl\:font-kalam {
-    font-family: kalam;
-  }
-
   .\32xl\:text-xs {
     font-size: 0.75rem;
     line-height: 1rem;
@@ -181487,6 +181838,21 @@ video {
     color: rgba(131, 24, 67, var(--tw-text-opacity));
   }
 
+  .\32xl\:text-primary {
+    --tw-text-opacity: 1;
+    color: rgba(204, 45, 74, var(--tw-text-opacity));
+  }
+
+  .\32xl\:text-secondary {
+    --tw-text-opacity: 1;
+    color: rgba(143, 162, 6, var(--tw-text-opacity));
+  }
+
+  .\32xl\:text-terciary {
+    --tw-text-opacity: 1;
+    color: rgba(97, 174, 201, var(--tw-text-opacity));
+  }
+
   .group:hover .\32xl\:group-hover\:text-transparent {
     color: transparent;
   }
@@ -181903,6 +182269,21 @@ video {
   .group:hover .\32xl\:group-hover\:text-pink-900 {
     --tw-text-opacity: 1;
     color: rgba(131, 24, 67, var(--tw-text-opacity));
+  }
+
+  .group:hover .\32xl\:group-hover\:text-primary {
+    --tw-text-opacity: 1;
+    color: rgba(204, 45, 74, var(--tw-text-opacity));
+  }
+
+  .group:hover .\32xl\:group-hover\:text-secondary {
+    --tw-text-opacity: 1;
+    color: rgba(143, 162, 6, var(--tw-text-opacity));
+  }
+
+  .group:hover .\32xl\:group-hover\:text-terciary {
+    --tw-text-opacity: 1;
+    color: rgba(97, 174, 201, var(--tw-text-opacity));
   }
 
   .\32xl\:focus-within\:text-transparent:focus-within {
@@ -182323,6 +182704,21 @@ video {
     color: rgba(131, 24, 67, var(--tw-text-opacity));
   }
 
+  .\32xl\:focus-within\:text-primary:focus-within {
+    --tw-text-opacity: 1;
+    color: rgba(204, 45, 74, var(--tw-text-opacity));
+  }
+
+  .\32xl\:focus-within\:text-secondary:focus-within {
+    --tw-text-opacity: 1;
+    color: rgba(143, 162, 6, var(--tw-text-opacity));
+  }
+
+  .\32xl\:focus-within\:text-terciary:focus-within {
+    --tw-text-opacity: 1;
+    color: rgba(97, 174, 201, var(--tw-text-opacity));
+  }
+
   .\32xl\:hover\:text-transparent:hover {
     color: transparent;
   }
@@ -182741,6 +183137,21 @@ video {
     color: rgba(131, 24, 67, var(--tw-text-opacity));
   }
 
+  .\32xl\:hover\:text-primary:hover {
+    --tw-text-opacity: 1;
+    color: rgba(204, 45, 74, var(--tw-text-opacity));
+  }
+
+  .\32xl\:hover\:text-secondary:hover {
+    --tw-text-opacity: 1;
+    color: rgba(143, 162, 6, var(--tw-text-opacity));
+  }
+
+  .\32xl\:hover\:text-terciary:hover {
+    --tw-text-opacity: 1;
+    color: rgba(97, 174, 201, var(--tw-text-opacity));
+  }
+
   .\32xl\:focus\:text-transparent:focus {
     color: transparent;
   }
@@ -183157,6 +183568,21 @@ video {
   .\32xl\:focus\:text-pink-900:focus {
     --tw-text-opacity: 1;
     color: rgba(131, 24, 67, var(--tw-text-opacity));
+  }
+
+  .\32xl\:focus\:text-primary:focus {
+    --tw-text-opacity: 1;
+    color: rgba(204, 45, 74, var(--tw-text-opacity));
+  }
+
+  .\32xl\:focus\:text-secondary:focus {
+    --tw-text-opacity: 1;
+    color: rgba(143, 162, 6, var(--tw-text-opacity));
+  }
+
+  .\32xl\:focus\:text-terciary:focus {
+    --tw-text-opacity: 1;
+    color: rgba(97, 174, 201, var(--tw-text-opacity));
   }
 
   .\32xl\:text-opacity-0 {
