--- a/pub/css/tailwind.css
+++ b/pub/css/tailwind.css
@@ -484,16 +484,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   bottom: 0px;
 }
 
+.z-40 {
+  z-index: 40;
+}
+
 .ml-16 {
   margin-left: 4rem;
 }
 
 .mt-6 {
   margin-top: 1.5rem;
-}
-
-.mr-24 {
-  margin-right: 6rem;
 }
 
 .flex {
@@ -508,8 +508,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   display: none;
 }
 
+.h-16 {
+  height: 4rem;
+}
+
 .h-auto {
   height: auto;
+}
+
+.h-8 {
+  height: 2rem;
 }
 
 .h-3\/4 {
@@ -530,20 +538,20 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 24rem;
 }
 
-.h-8 {
-  height: 2rem;
-}
-
 .w-full {
   width: 100%;
 }
 
-.w-44 {
-  width: 11rem;
+.w-auto {
+  width: auto;
 }
 
 .w-8 {
   width: 2rem;
+}
+
+.w-44 {
+  width: 11rem;
 }
 
 .transform {
@@ -566,8 +574,18 @@ Ensure the default browser behavior of the `hidden` attribute.
   justify-content: center;
 }
 
+.justify-between {
+  justify-content: space-between;
+}
+
 .gap-4 {
   gap: 1rem;
+}
+
+.space-x-8 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(2rem * var(--tw-space-x-reverse));
+  margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .space-y-96 > :not([hidden]) ~ :not([hidden]) {
@@ -594,10 +612,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .rounded-lg {
   border-radius: 0.5rem;
-}
-
-.rounded-xl {
-  border-radius: 0.75rem;
 }
 
 .bg-white {
@@ -643,10 +657,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-image: url('../img/bali.jpg');
 }
 
-.bg-LA {
-  background-image: url('../img/LA.jpg');
-}
-
 .bg-cover {
   background-size: cover;
 }
@@ -655,12 +665,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   fill: currentColor;
 }
 
-.p-3 {
-  padding: 0.75rem;
-}
-
 .p-4 {
   padding: 1rem;
+}
+
+.p-3 {
+  padding: 0.75rem;
 }
 
 .p-6 {
@@ -701,6 +711,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-bottom: 1.75rem;
 }
 
+.pr-2 {
+  padding-right: 0.5rem;
+}
+
 .pb-6 {
   padding-bottom: 1.5rem;
 }
@@ -709,22 +723,18 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-top: 0.5rem;
 }
 
-.pl-8 {
-  padding-left: 2rem;
-}
-
 .font-Montserrat {
   font-family: Montserrat, sans-serif;
-}
-
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
 }
 
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .text-lg {
@@ -735,6 +745,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.font-black {
+  font-weight: 900;
 }
 
 .font-bold {
@@ -758,24 +772,24 @@ Ensure the default browser behavior of the `hidden` attribute.
   color: rgb(204 45 74 / var(--tw-text-opacity));
 }
 
+.text-gray-200 {
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity));
+}
+
+.text-gray-900 {
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity));
+}
+
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-gray-800 {
-  --tw-text-opacity: 1;
-  color: rgb(31 41 55 / var(--tw-text-opacity));
-}
-
 .text-gray-300 {
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity));
-}
-
-.text-gray-200 {
-  --tw-text-opacity: 1;
-  color: rgb(229 231 235 / var(--tw-text-opacity));
 }
 
 .shadow-sm {
@@ -881,6 +895,35 @@ Ensure the default browser behavior of the `hidden` attribute.
   display: -webkit-box;
 }
 
+.dark {
+  color: white;
+  background-color: #111827;
+}
+
+.dark .drk-nav {
+  background-color: #1f2937;
+}
+
+.dark .drk-footer {
+  background-color: #374151;
+}
+
+.dark .drk-title {
+  color: white;
+}
+
+.dark .drk-card-green {
+  background-color: #374151;
+}
+
+.dark .drk-card-white {
+  background-color: #1f2937;
+}
+
+.dark .drk-card-white .drk-text {
+  color: white;
+}
+
 .hover\:translate-y-1:hover {
   --tw-translate-y: 0.25rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -921,10 +964,6 @@ Ensure the default browser behavior of the `hidden` attribute.
     grid-column: span 3 / span 3;
   }
 
-  .lg\:col-span-5 {
-    grid-column: span 5 / span 5;
-  }
-
   .lg\:row-span-2 {
     grid-row: span 2 / span 2;
   }
@@ -935,10 +974,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .lg\:ml-16 {
     margin-left: 4rem;
-  }
-
-  .lg\:mr-8 {
-    margin-right: 2rem;
   }
 
   .lg\:flex {
@@ -1017,10 +1052,5 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .lg\:text-right {
     text-align: right;
-  }
-
-  .lg\:text-base {
-    font-size: 1rem;
-    line-height: 1.5rem;
   }
 }
