--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33248,6 +33248,33 @@ video {
   display: -webkit-box;
 }
 
+.dark {
+  color: white;
+  background-color: #111827;
+}
+
+.dark .drk-nav {
+  background-color: #1f2937;
+}
+
+.dark .drk-footer {
+  background-color: #374151;
+}
+
+.dark .drk-title {
+  color: white;
+}
+
+.dark .drk-card-green {
+  background-color: #374151;
+  color: white;
+}
+
+.dark .drk-card-white {
+  background-color: #1f2937;
+  color: white;
+}
+
 @media (min-width: 640px) {
   .sm\:container {
     width: 100%;
